Archive2/4d/1a9a7896d73a48/output
main.cpp:42:5: error: 'operator Sandbox::A &' is a private member of 'Sandbox::B'
    (Sandbox::A&)b;
    ^            ~
main.cpp:28:9: note: declared private here
        operator A& ();
        ^
main.cpp:42:5: warning: expression result unused [-Wunused-value]
    (Sandbox::A&)b;
    ^            ~
main.cpp:46:5: warning: expression result unused [-Wunused-value]
    (const Sandbox::A&)b;
    ^                  ~
2 warnings and 1 error generated.
